2009-10-05  Daniel Kraft  <d@domob.eu>

PR fortran/41403
	* trans-stmt.c (gfc_trans_goto): Ignore statement list on assigned goto
	if it is present.

2009-10-05  Daniel Kraft  <d@domob.eu>

	PR fortran/41403
	* gfortran.dg/goto_6.f: New test.
	* gfortran.dg/goto_7.f: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@152448 138bc75d-0d04-0410-961f-82ee72b054a4